# AzureSphereClassify

./: .gitignore  .gitmodules  AzureSphereRTCoreToolchainEdgeImpulse.cmake  README.md
IntercoreContract/: intercore_contract.h
classifyHL/: .clang-format  CMakeLists.txt  README.md  app_manifest.json  main.c  main.h
classifyRT/: AzureSphereRTCoreToolchainEdgeImpulse.cmake  AzureSphereRTCoreToolchainMTK.cmake  CMakeLists.txt  app_manifest.json  main.cpp
classifyRT/model-parameters/: model_metadata.h
image_packages/: FreeRTOS_RTcore_I2C_Accelerometer.imagepackage
